Fixed a bug with spacing on feature page. Added phone frame to screenshot

--- a/src/components/features.scss
+++ b/src/components/features.scss
@@ -44,7 +44,8 @@
   .right {
     margin: auto 0;
     img {
-      max-width: 350px;
+      box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+      max-width: 250px;
 
     }
   }
@@ -107,15 +108,16 @@
   }
 
   .product-feature-primer {
-    height: 55vh;
+    // height: 55vh;
+    margin-bottom: 5rem;
     .primers {
       display: flex;
-      justify-content: space-around;
+      justify-content: center;
       padding: 0 2rem;
     }
 
     .primer {
-      margin: 0 1rem;
+      // margin: 0 1rem;
       max-width: 300px;
     }
   }
