--- a/src/components/front_page.css
+++ b/src/components/front_page.css
@@ -4,7 +4,7 @@
 }
 
 .front-page .image img {
-  box-shadow: 0 1rem 3rem rgba(255,255,255,.175);
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
   max-width: 250px;
 }
 
